--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
   </head>
   <body class="bg-body-tertiary container mt-3">
     <header>
+      <!-- Navbar Started -->
       <nav class="navbar bg-body-tertiary">
         <div class="container-fluid">
           <div class="d-flex justify-content-center align-items-center">
-            <!-- <img class="logo-img" src="images/Logo.svg" alt="" /> -->
             <div class="logo-text">
               <span class="logo-info">Info </span> Canvas
             </div>
           </div>
-          <form class="d-flex" role="search">
+          <form class="d-flex justify-content-center" role="search">
             <button class="btn btn-outline-primary me-3" type="submit">
               News
             </button>
@@ -41,19 +41,40 @@
         </div>
       </nav>
       <hr />
+      <!-- Navbar Ended -->
     </header>
 
-    <main></main>
+    <main>
+      <!-- Catagory Buttons starts  -->
+      <section
+        class="d-flex justify-content-center align-items-center"
+        id="category-container"
+      ></section>
+      <!-- Catagory Buttons ends  -->
+
+      <!-- News Details starts  -->
+      <section
+        class="d-flex flex-column justify-content-center align-items-center"
+        id="news-container"
+      >
+        <div class="card mb-3" style="max-width: 540px"></div>
+      </section>
+      <!-- News Details ends  -->
+    </main>
 
     <!-- Script -->
-    <script src="script.js"></script>
+    <script src="app.js"></script>
+    <script src="newsDetails.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://kit.fontawesome.com/b56007b7b2.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
-
 
 
