--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>InfoCanvas</title>
+    <title>Info Canvas</title>
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -30,13 +30,13 @@
           </div>
           <form class="d-flex justify-content-center" role="search">
             <div class="btn-group">
+              <a href="index.html" class="btn btn-primary">News</a>
               <a
-                href="index.html"
+                href="blog.html"
                 class="btn btn-primary active"
                 aria-current="page"
-                >News</a
+                >Blog</a
               >
-              <a href="blog.html" class="btn btn-primary">Blog</a>
             </div>
 
             <a class="ps-3" href=""><img src="images/user.png" alt="" /></a>
@@ -47,31 +47,7 @@
       <!-- Navbar Ended -->
     </header>
 
-    <main>
-      <!-- Catagory Buttons starts  -->
-      <section
-        class="d-flex justify-content-center align-items-center container"
-        id="category-container"
-      ></section>
-      <!-- Catagory Buttons ends  -->
-
-      <!-- News Details starts  -->
-      <section
-        class="d-flex flex-column justify-content-center align-items-center container"
-        id="all-news"
-      >
-        <div class="card mb-3" style="max-width: 540px"></div>
-      </section>
-
-      <!-- News Details ends  -->
-
-      <section
-        class="d-flex flex-column justify-content-center align-items-center p-5 fs-3 text-danger d-none"
-        id="no-news"
-      >
-        No news found in this category.
-      </section>
-    </main>
+    <main></main>
 
     <!-- footer starts -->
     <section class="bg-dark-subtle mt-5">
@@ -86,7 +62,6 @@
 
     <!-- Script -->
     <script src="scripts/app.js"></script>
-    <script src="scripts/categoryDetails.js"></script>
     <script src="scripts/newsDetails.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
