--- a/news.html
+++ b/news.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>InfoCanvas</title>
+    <title>Info Canvas</title>
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -47,46 +47,29 @@
       <!-- Navbar Ended -->
     </header>
 
+    
+
     <main>
-      <!-- Catagory Buttons starts  -->
-      <section
-        class="d-flex justify-content-center align-items-center container"
-        id="category-container"
-      ></section>
-      <!-- Catagory Buttons ends  -->
-
-      <!-- News Details starts  -->
-      <section
-        class="d-flex flex-column justify-content-center align-items-center container"
-        id="all-news"
-      >
-        <div class="card mb-3" style="max-width: 540px"></div>
-      </section>
-
-      <!-- News Details ends  -->
-
-      <section
-        class="d-flex flex-column justify-content-center align-items-center p-5 fs-3 text-danger d-none"
-        id="no-news"
-      >
-        No news found in this category.
-      </section>
+      <section id="news-container"></section>
     </main>
 
-    <!-- footer starts -->
-    <section class="bg-dark-subtle mt-5">
-      <div class="p-4">
-        <p class="text-center m-0">
-          Info Canvas <br />
-          Copyright 2023
-        </p>
-      </div>
-    </section>
-    <!-- footer ends -->
 
+
+
+
+     <!-- footer starts -->
+     <section class="bg-dark-subtle mt-5">
+        <div class="p-4">
+          <p class="text-center m-0">
+            Info Canvas <br />
+            Copyright 2023
+          </p>
+        </div>
+      </section>
+      <!-- footer ends -->
     <!-- Script -->
-    <script src="scripts/app.js"></script>
-    <script src="scripts/categoryDetails.js"></script>
+    <!-- <script src="scripts/app.js"></script>
+    <script src="scripts/categoryDetails.js"></script> -->
     <script src="scripts/newsDetails.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
