Bug fixed of News Details Page

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       ></section>
       <!-- Catagory Buttons ends  -->
 
-      <!-- News Details starts  -->
+      <!-- News heading starts  -->
       <section
         class="d-flex flex-column justify-content-center align-items-center container"
         id="all-news"
@@ -63,8 +63,16 @@
         <div class="card mb-3" style="max-width: 540px"></div>
       </section>
 
-      <!-- News Details ends  -->
+      <!-- News heading ends  -->
 
+      
+      <!-- news details starts -->
+
+      <main>
+        <section id="news-container"></section>
+      
+
+      <!-- News Details ends  -->
       <section
         class="d-flex flex-column justify-content-center align-items-center p-5 fs-3 text-danger d-none"
         id="no-news"
