--- a/blog.html
+++ b/blog.html
@@ -62,6 +62,7 @@
 
     <!-- Script -->
     <script src="scripts/app.js"></script>
+    <script src="scripts/categoryDetails.js"></script>
     <script src="scripts/newsDetails.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
