--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@
       ></section>
       <!-- Catagory Buttons ends  -->
 
+      <!-- News Count Starts -->
+
+      <section id="news-count" class="m-4"></section>
+
+      <!-- News Count Ends -->
+
       <!-- News heading starts  -->
       <section
         class="d-flex flex-column justify-content-center align-items-center container"
@@ -69,12 +75,12 @@
       <!-- news details starts -->
 
       <main>
-        <section id="news-container"></section>
+        <section id="news-container" class="mt-5"></section>
       
 
       <!-- News Details ends  -->
       <section
-        class="d-flex flex-column justify-content-center align-items-center p-5 fs-3 text-danger d-none"
+        class="d-flex flex-column justify-content-center align-items-center p-5 fs-3  text-danger d-none"
         id="no-news"
       >
         No news found in this category.
